--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21'
+        go-version: '1.23'
 
     - name: Cache Go modules
       uses: actions/cache@v3
@@ -133,10 +133,11 @@ jobs:
         image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
         format: 'sarif'
         output: 'docker-trivy-results.sarif'
+      continue-on-error: true
 
     - name: Upload Docker scan results
       uses: github/codeql-action/upload-sarif@v4
-      if: always()
+      if: always() && hashFiles('docker-trivy-results.sarif') != ''
       with:
         sarif_file: 'docker-trivy-results.sarif'
 
